Providers page & Teplates page structure refactored, bugs fixed, reduced number of displayed lang bodies

--- a/Backoffice/Components/SmsSender/Providers/ProvidersRoutesTableRow.razor
+++ b/Backoffice/Components/SmsSender/Providers/ProvidersRoutesTableRow.razor
@@ -6,10 +6,10 @@
 @inject IToaster ToastService
 
 <tr>
-    <td>@Route.Id</td>
     <td>@Route.Name</td>
     <td>@Route.Order</td>
     <td>@Route.Pattern</td>
+    <td>@Route.ProviderId</td>
     <td>
         <ul class="nav">
             <li><button type="button" class="btn-outline-warning btn" @onclick="ShowEdit">Edit</button></li>
