--- a/Backoffice/Components/SmsSender/Providers/ProvidersComponent.razor
+++ b/Backoffice/Components/SmsSender/Providers/ProvidersComponent.razor
@@ -8,47 +8,35 @@
 
 <Loader LoaderConfig="@LoaderConfig" />
 
-<ul class="nav nav-tabs nav-pills">
-    @foreach (var provider in ProvidersList)
-    {
-        <li class="nav-item" style="margin: 10px">
-            <button class="nav-link" aria-current="page" @onclick="@(() => SetProvider(provider))">@provider</button>
-        </li>
-    }
+<ul class="nav float-left">
+    <li><button @onclick="OnRefresh" type="button" class="btn btn-outline-primary" style="margin: 5px; border-radius: 10px">Refresh</button></li>
+    <li><button @onclick="OnAddRoute" type="button" class="btn btn-outline-success" style="margin: 5px; border-radius: 10px">Add</button></li>
 </ul>
-
-@if (!string.IsNullOrEmpty(SelectedProvider))
-{
-    <ul class="nav float-left">
-        <li><button @onclick="OnRefresh" type="button" class="btn btn-outline-primary" style="margin: 5px; border-radius: 10px">Refresh</button></li>
-        <li><button @onclick="OnAddRoute" type="button" class="btn btn-outline-success" style="margin: 5px; border-radius: 10px">Add</button></li>
-    </ul>
-    <div class="row">
-        <h3 style="margin: 10px">@SelectedProvider</h3>
-    </div>
-    <div class="row">
-        <table class="table" style="width: auto">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Order</th>
-                    <th>Pattern</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (ProvidersRoutes.Count(r => r.Key == SelectedProvider) > 0)
-                {
-                    @foreach (var route in ProvidersRoutes.FirstOrDefault(r => r.Key == SelectedProvider).Value)
-                    {
-                        <ProvidersRoutesTableRow Route="@route" LoaderConfig="@LoaderConfig" OnDeleteCallback="OnDeleteRoute" />
-                    }
-                }
-            </tbody>
-        </table>
-    </div>
-}
+<div class="row">
+    <h3 style="margin: 10px">@SelectedProvider</h3>
+</div>
+<div class="row">
+    <table class="table" style="width: auto">
+        <thead>
+        <tr>
+            <th>Route name</th>
+            <th>Weight</th>
+            <th>Patterns</th>
+            <th>Provider name</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        @if (ProvidersRoutes.Any())
+        {
+            @foreach (var route in ProvidersRoutes)
+            {
+                <ProvidersRoutesTableRow Route="@route" LoaderConfig="@LoaderConfig" OnDeleteCallback="OnDeleteRoute" />
+            }
+        }
+        </tbody>
+    </table>
+</div>
 
 @if (IsShowAdding)
 {
@@ -62,7 +50,7 @@
     private ILoaderConfiguration LoaderConfig { get; set; } = new LoaderConfiguration();
     private string[] ProvidersList { get; set; } = Array.Empty<string>();
     private string SelectedProvider { get; set; }
-    private Dictionary<string, List<ProviderRoute>> ProvidersRoutes { get; set; } = new();
+    private List<ProviderRoute> ProvidersRoutes { get; set; } = new();
 
     private bool IsShowAdding { get; set; }
     private const int MAX_ATTEMPTS_COUNT = 3;
@@ -116,17 +104,7 @@
             try
             {
                 var providersRoutesResponse = await SmsProviderService.GetAllRoutesAsync();
-                var providersRoutes = providersRoutesResponse.Routes.Where(r => r.ProviderId != null).ToList();
-                
-                foreach (var providersRoute in providersRoutes)
-                {
-                    if (!ProvidersRoutes.ContainsKey(providersRoute.ProviderId))
-                    {
-                        ProvidersRoutes.Add(providersRoute.ProviderId, new List<ProviderRoute>());
-                    }
-
-                    ProvidersRoutes[providersRoute.ProviderId].Add(providersRoute);
-                }
+                ProvidersRoutes = providersRoutesResponse.Routes.OrderBy(r => r.Order).ToList();
 
                 break;
             }
@@ -155,12 +133,6 @@
         LoaderConfig.Disable();
 
         await base.OnInitializedAsync();
-    }
-
-    private void SetProvider(string provider)
-    {
-        SelectedProvider = provider;
-        StateHasChanged();
     }
 
     private async Task OnAddRoute()
