--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -59,6 +59,9 @@
                         <button class="page-link" style="@(GetMenuStyle(ClientPage.TradeHistory))" @onclick="@(() => SetPage(ClientPage.TradeHistory))">Trades</button>
                     </li>
                     <li class="nav-item">
+                        <button class="page-link" style="@(GetMenuStyle(ClientPage.SwapHistory))" @onclick="@(() => SetPage(ClientPage.SwapHistory))">Swaps</button>
+                    </li>
+                    <li class="nav-item">
                         <button class="page-link" style="@(GetMenuStyle(ClientPage.BlockchainDepositAddress))" @onclick="@(() => SetPage(ClientPage.BlockchainDepositAddress))">Blockchain Addresses</button>
                     </li>
                 </ul>
@@ -82,6 +85,10 @@
 
                         case ClientPage.TradeHistory:
                             <ClientTradeHistoryComponent />
+                            break;
+                            
+                        case ClientPage.SwapHistory:
+                            <ClientSwapHistoryComponent />
                             break;
 
                         case ClientPage.BlockchainDepositAddress:
@@ -136,6 +143,7 @@
         BalanceHistory,
         ActiveOrders,
         TradeHistory,
+        SwapHistory,
         BlockchainDepositAddress
     }
 
