Displaying notification templates and history

--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -36,3 +36,6 @@
 @using Backoffice.Components.SmsSender.Mock
 @using Backoffice.Components.SmsSender.Providers
 @using Backoffice.Components.SmsSender.Templates
+@using Backoffice.Components.Notifications.History
+@using Backoffice.Components.Notifications.Templates
+
