--- a/Backoffice/Components/Notifications/Templates/NotificationBodyDialogEdit.razor
+++ b/Backoffice/Components/Notifications/Templates/NotificationBodyDialogEdit.razor
@@ -21,6 +21,7 @@
             <div>
                 <textarea type="text" class="form-control" placeholder="Body" @bind="Request.TemplateBody"></textarea>
             </div>
+            <div>Template params: @TemplateParams</div>
             
 </BaseTwoButtonsDialog>
 
@@ -43,6 +44,9 @@
 
     [Parameter]
     public EventCallback<TemplateEditRequest> OnUpdateCallback { get; set; }
+    
+    [Parameter]
+    public string TemplateParams { get; set; }
 
     private void OnClose()
     {
