--- a/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
+++ b/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
@@ -30,7 +30,7 @@
                 <td>@template.Type.ToString()</td>
                 <td>@template.DefaultBrand</td>
                 <td>@template.DefaultLang</td>
-                <td>@string.Join(" | ", template.Params.ToArray())</td>
+                <td>@string.Join(" ", template.Params.ToArray())</td>
                 <td>
                     <ul class="nav">
                         <li><button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowBodies(template, template.Type.ToString()); })">Bodies</button></li>
@@ -39,6 +39,9 @@
             </tr>
             @if (SelectedPosition == template.Type.ToString())
             {
+                SelectedType = template.Type;
+                SelectedTemplateParams = string.Join(" ", template.Params.ToArray());
+                
                 <tr>
                     <td colspan="9">
                         <div class="border" style="margin-left: 20px; width: auto">
@@ -55,14 +58,13 @@
                                 <tbody>
                                 @foreach (var body in _bodies)
                                 {
-
                                     <tr>
                                         <td>@body.Key.brand
-                                                                                    @if (body.Key.brand == template.DefaultBrand && body.Key.lang == template.DefaultLang)
-                                                                                    {
-                                                                                        <h6>Default Template</h6>
-                                                                                    }
-                                                                                    </td>
+                                            @if (body.Key.brand == template.DefaultBrand && body.Key.lang == template.DefaultLang)
+                                            {
+                                                <h6>Default Template</h6>
+                                            }
+                                        </td>
                                         <td>@body.Key.lang</td>
                                         <td>@body.Value.topic</td>
                                         <td>@body.Value.body</td>
@@ -93,7 +95,7 @@
 @if (IsShowEdit)
 {
     <div>
-        <NotificationBodyDialogEdit Request="@EditRequest" IsCreate="@IsCreate" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplate(); }" />
+        <NotificationBodyDialogEdit Request="@EditRequest" IsCreate="@IsCreate" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplate(); }" />
     </div>
 }
 
@@ -106,6 +108,8 @@
     private bool IsShowEdit { get; set; }
     private TemplateEditRequest EditRequest { get; set; }
     private bool IsCreate { get; set; }
+    private string SelectedTemplateParams { get; set; }
+    private NotificationTypeEnum SelectedType { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -154,10 +158,9 @@
     private void ShowCreate()
     {
         IsCreate = true;
-        Enum.TryParse<NotificationTypeEnum>(SelectedPosition, out var type);
         EditRequest = new TemplateEditRequest()
         {
-            Type = type
+            Type = SelectedType
         };
         IsShowEdit = true;
         StateHasChanged();
@@ -173,6 +176,7 @@
     {
         IsShowEdit = false;
         await _templateService.EditTemplate(EditRequest);
-        await RefreshTokens();
+        _bodies[(EditRequest.Brand,EditRequest.Lang)] = (EditRequest.TemplateTopic, EditRequest.TemplateBody);
+        StateHasChanged();
     }
 }
