--- a/Backoffice/Pages/Notifications.razor
+++ b/Backoffice/Pages/Notifications.razor
@@ -5,7 +5,7 @@
         <button class="nav-link @CheckActive(Menus.History)" @onclick="SetHistory">History</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Templates)" aria-current="page" @onclick="SetTemplates">Template</button>
+        <button class="nav-link @CheckActive(Menus.Templates)" aria-current="page" @onclick="SetTemplates">Templates</button>
     </li>
 </ul>
 
