History with user agent

--- a/Backoffice/Components/Notifications/History/NotificationHistoryComponent.razor
+++ b/Backoffice/Components/Notifications/History/NotificationHistoryComponent.razor
@@ -55,7 +55,7 @@
                                 <thead>
                                 <tr>
                                     <th>StatusId</th>
-                                    <th>Token</th>
+                                    <th>UserAgent</th>
                                     <th>IsSuccess</th>
                                 </tr>
                                 </thead>
@@ -64,7 +64,7 @@
                                 {
                                     <tr>
                                         <td>@status.StatusId.ToString("D")</td>
-                                        <td>@status.Token</td>
+                                        <td>@status.UserAgent</td>
                                         <td>@status.IsSuccess</td>
                                     </tr>
                                 }
