--- a/Backoffice/Components/Converter/History/ConverterHistoryComponent.razor
+++ b/Backoffice/Components/Converter/History/ConverterHistoryComponent.razor
@@ -30,6 +30,7 @@
         <th>WalletId</th>
         <th>OperationId</th>
         <th>Price</th>
+        <th>MarkUp</th>
         <th>ExpireDate</th>
         <th>State</th>
         <th>OpenDate</th>
@@ -67,6 +68,7 @@
             <td>@history.Quote.WalletId</td>
             <td>@history.Quote.OperationId</td>
             <td>@history.Quote.Price</td>
+            <td>@history.Quote.MarkUp</td>
             <td>@history.Quote.ExpireDate</td>
             <td>@history.Quote.State</td>
             <td>@history.Quote.OpenDate</td>
@@ -84,11 +86,15 @@
                         <table class="table">
                             <thead>
                             <tr>
-                                <th>InstrumentSymbol</th>
-                                <th>InstrumentPrice</th>
-                                <th>MarkUp</th>
-                                <th>OperationId</th>
-                                <th>TradeId</th>
+                                    <th>InstrumentSymbol</th>
+                                    <th>InstrumentPrice</th>
+                                    <th>OperationId</th>
+                                    <th>TradeId</th>
+                                    <th>Volume</th>
+                                    <th>OppositeVolume</th>                              
+                                    <th>OrderSide</th>
+                                    <th>MarketOrderId</th>
+                                    <th>ErrorText</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -97,9 +103,13 @@
                                 <tr>
                                     <td>@trade.InstrumentSymbol</td>
                                     <td>@trade.InstrumentPrice</td>
-                                    <td>@trade.MarkUp</td>
                                     <td>@trade.OperationId</td>
                                     <td>@trade.TradeId</td>
+                                    <td>@trade.Volume</td>
+                                    <td>@trade.OppositeVolume</td>                              
+                                    <td>@trade.OrderSide</td>
+                                    <td>@trade.MarketOrderId</td>
+                                    <td>@trade.ErrorText</td>
                                 </tr>
                             }
                             </tbody>
