--- a/Backoffice/Components/Clients/ClientSwapHistoryComponent.razor
+++ b/Backoffice/Components/Clients/ClientSwapHistoryComponent.razor
@@ -80,7 +80,7 @@
             WalletId = Wallet.WalletId
         });
 
-        Swaps = historyResponse.SwapCollection;
+        Swaps = historyResponse.SwapCollection ?? new();
         _lastSeen = historyResponse.DateForNextQuery;
         _currentPageSize = CountInPage;
         
